--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
     <meta charset="utf-8">
 
 
-<title>
-  
-    Carousel template · Sass Bootstrap
-  
-</title>
+<title>Digifab.hk</title>
 
 <!-- Bootstrap core CSS -->
 <link href="css/bootstrap.css" rel="stylesheet">
