--- a/signup.html
+++ b/signup.html
@@ -1,9 +1,10 @@
 <html>
 <head>
   <title>Digifab.HK</title>
-  <meta name="description" content="Digifab is Hong Kong's online 3D Printing Community, Learn, create and share your designs">
+  <meta name="description" content="Digifab Hong Kong is a 3D Design Education Service aimed for Makers interested in 3D Fabrication">
   <meta keywords="Learn,3D,Printing,Design,Makers,Hackerspace,Hobby,Hong Kong">
   <meta charset="UTF-8">
+
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
@@ -11,7 +12,7 @@
   <main class="container">
 
     <header>
-      <span class="logo"><a href="#">DigiFab.HK</a></span>
+      <span class="logo"><a href="index.html">DigiFab.HK</a></span>
       <nav class="menu-container">
         <ul class="menu">
           <!-- <li class="menu-item"><a href="/">Services</a></li>
@@ -36,7 +37,7 @@
           </div>
           <nav class="signup">
             <span>Learn More</span>
-            <span><a href="signup.html" class="signup-button">Sign Up</a></span>
+            <span><a href="#" class="signup-button">Sign Up</a></span>
           </nav>
       </section>
       
@@ -108,7 +109,7 @@
       <h2 class="title">Have we got your attention?</h2>
       <nav class="signup">
         <span>Learn More</span>
-        <span><a href="signup.html" class="signup-button">Sign Up</a></span>
+        <span><a href="#" class="signup-button">Sign Up</a></span>
       </nav>
     </article>
 
