--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
           <nav class="signup">
             <span>Learn More</span>
-            <span><a href="signup.html" class="signup-button">Sign Up</a></span>
+            <span><a href="http://eepurl.com/JTpS5" class="signup-button">Sign Up</a></span>
           </nav>
       </section>
       
@@ -108,7 +108,7 @@
       <h2 class="title">Have we got your attention?</h2>
       <nav class="signup">
         <span>Learn More</span>
-        <span><a href="signup.html" class="signup-button">Sign Up</a></span>
+        <span><a href="http://eepurl.com/JTpS5" class="signup-button">Sign Up</a></span>
       </nav>
     </article>
 
